send server requests

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,10 @@
     </nav>
 </header>
 <body>
-<p>Hello World</p>
+<!--suppress BadExpressionStatementJS -->
+<button onclick="listPlayers">Players</button>
 </body>
+<script src="index.js"></script>
+<!--suppress HtmlUnknownTarget -->
+<script src="jquery.js"></script>
 </html>
